--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="root" class="min-h-screen grid "></div>
+    <div 
+      id="root" 
+      class="min-h-screen flex flex-col bg-fondo bg-50 bg-cover"
+    ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
